--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <button class="tab" data-section="section4">기타</button>
   </div>
 
-  <!-- [1] 단어 앱 -->
+  <!-- [1] 단어  -->
   <div class="content-section active" id="section1">
     <div class="book-grid">
       <!-- 20개 예시, 이미지/제목/링크만 바꾸세요 -->
@@ -216,7 +216,7 @@
     </div>
   </div>
 
-  <!-- [2] 문장 배열 연습하기 -->
+  <!-- [2] 문장 배열  -->
   <div class="content-section" id="section2">
     <div class="book-grid">
       <!-- 20개 예시 -->
@@ -244,7 +244,7 @@
     </div>
   </div>
 
-  <!-- [3] 한줄해석 연습하기 -->
+  <!-- [3] 한줄해석  -->
   <div class="content-section" id="section3">
     <div class="book-grid">
       <!-- 20개 예시 -->
