--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 <body>
   <div class="header">목동서로영어학원 - 단어연습앱</div>
   <div class="tabs">
-    <button class="tab active" data-section="section1">단어 앱</button>
-    <button class="tab" data-section="section2">문장 배열 연습하기</button>
-    <button class="tab" data-section="section3">한줄해석 연습하기</button>
+    <button class="tab active" data-section="section1">단어 </button>
+    <button class="tab" data-section="section2">문장 배열</button>
+    <button class="tab" data-section="section3">한줄해석</button>
     <button class="tab" data-section="section4">기타</button>
   </div>
 
