--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>목동서로영어학원 - 단어연습앱</title>
+  <title>목동서로영어학원 - 앱모음</title>
   <link href="https://fonts.googleapis.com/css2?family=Gmarket+Sans:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     html, body {
