--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   </style>
 </head>
 <body>
-  <div class="header">목동서로영어학원 - 단어연습앱</div>
+  <div class="header">목동서로영어학원 - 앱모음</div>
   <div class="tabs">
     <button class="tab active" data-section="section1">단어 </button>
     <button class="tab" data-section="section2">문장 배열</button>
