--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@
   <div class="content-section active" id="section1">
     <div class="book-grid">
       <!-- 20개 예시, 이미지/제목/링크만 바꾸세요 -->
-      <a href="word1.html" class="book-card"><img class="book-image" src="https://i.ibb.co/N2kqp9G/voca1.png"><span class="book-title">영어→한글</span></a>
-      <a href="word2.html" class="book-card"><img class="book-image" src="https://i.ibb.co/9nFSTvf/voca2.png"><span class="book-title">한글→영어</span></a>
-      <a href="word3.html" class="book-card"><img class="book-image" src="https://i.ibb.co/TB0kQgv/voca3.png"><span class="book-title">능률 VOCA 수능</span></a>
-      <a href="word4.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jb3bNTW/voca4.png"><span class="book-title">주니어 능률 VOCA 실력</span></a>
-      <a href="word5.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yS8DM0V/voca5.png"><span class="book-title">주니어 능률 VOCA 기본</span></a>
-      <a href="word6.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jwXvMz6/voca6.png"><span class="book-title">주니어 능률 VOCA V</span></a>
-      <a href="word7.html" class="book-card"><img class="book-image" src="https://i.ibb.co/pz6Xz6Y/voca7.png"><span class="book-title">해커스 보카 어원편</span></a>
-      <a href="word8.html" class="book-card"><img class="book-image" src="https://i.ibb.co/Trk9cDn/voca8.png"><span class="book-title">자이스토리 VOCA</span></a>
-      <a href="word9.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yR8fLhp/voca9.png"><span class="book-title">교과서 뜯어먹기</span></a>
-      <a href="word10.html" class="book-card"><img class="book-image" src="https://i.ibb.co/pzDQpY3/voca10.png"><span class="book-title">중학 영어 3</span></a>
+      <a href="https://nmyway77.github.io/highorigin/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3246303/32463036645.20230927071426.jpg?type=w300"><span class="book-title">영어→한글</span></a>
+      <a href="https://nmyway77.github.io/testh-e/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3246303/32463036645.20230927071426.jpg?type=w300"><span class="book-title">한글→영어</span></a>
+      <a href="word3.html" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3654620/36546208618.20230110163553.jpg?type=w300"><span class="book-title">영어→한글</span></a>
+      <a href="word4.html" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3654620/36546208618.20230110163553.jpg?type=w300"><span class="book-title">한글→영어</span></a>
+      <a href="word5.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yS8DM0V/voca5.png"><span class="book-title"></span></a>
+      <a href="word6.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jwXvMz6/voca6.png"><span class="book-title"></span></a>
+      <a href="word7.html" class="book-card"><img class="book-image" src="https://i.ibb.co/pz6Xz6Y/voca7.png"><span class="book-title"></span></a>
+      <a href="word8.html" class="book-card"><img class="book-image" src="https://i.ibb.co/Trk9cDn/voca8.png"><span class="book-title"></span></a>
+      <a href="word9.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yR8fLhp/voca9.png"><span class="book-title"></span></a>
+      <a href="word10.html" class="book-card"><img class="book-image" src="https://i.ibb.co/pzDQpY3/voca10.png"><span class="book-title"></span></a>
       <a href="word11.html" class="book-card"><img class="book-image" src="https://i.ibb.co/VWYfNvf/blank.png"><span class="book-title">Book 11</span></a>
       <a href="word12.html" class="book-card"><img class="book-image" src="https://i.ibb.co/VWYfNvf/blank.png"><span class="book-title">Book 12</span></a>
       <a href="word13.html" class="book-card"><img class="book-image" src="https://i.ibb.co/VWYfNvf/blank.png"><span class="book-title">Book 13</span></a>
