--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <a href="word3.html" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3654620/36546208618.20230110163553.jpg?type=w300"><span class="book-title">영어→한글</span></a>
       <a href="word4.html" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3654620/36546208618.20230110163553.jpg?type=w300"><span class="book-title">한글→영어</span></a>
       <a href="word5.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yS8DM0V/voca5.png"><span class="book-title"></span></a>
-      <a href="word6.html" class="book-card"><img class="book-image" src="https://cdn.011st.com/11dims/resize/600x600/quality/75/11src/pd/v2/2/9/8/4/9/6/jjEQM/8310298496_B.jpg"><span class="book-title">영어→한글</span></a>
+      <a href="https://nmyway77.github.io/word200/" class="book-card"><img class="book-image" src="https://cdn.011st.com/11dims/resize/600x600/quality/75/11src/pd/v2/2/9/8/4/9/6/jjEQM/8310298496_B.jpg"><span class="book-title">영어→한글</span></a>
       <a href="word7.html" class="book-card"><img class="book-image" src="https://cdn.011st.com/11dims/resize/600x600/quality/75/11src/pd/v2/2/9/8/4/9/6/jjEQM/8310298496_B.jpg"><span class="book-title">한글→영어</span></a>
       <a href="word8.html" class="book-card"><img class="book-image" src="https://i.ibb.co/Trk9cDn/voca8.png"><span class="book-title"></span></a>
       <a href="word9.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yR8fLhp/voca9.png"><span class="book-title"></span></a>
