--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
     <div class="book-grid">
       <!-- 20개 예시 -->
       <!-- 아래 예시 카드들 이미지만 바꿔서 사용하세요 -->
-      <a href="sentence1.html" class="book-card"><img class="book-image" src="https://i.ibb.co/N2kqp9G/voca1.png"><span class="book-title">문장 배열 연습1</span></a>
-      <a href="sentence2.html" class="book-card"><img class="book-image" src="https://i.ibb.co/9nFSTvf/voca2.png"><span class="book-title">문장 배열 연습2</span></a>
-      <a href="sentence3.html" class="book-card"><img class="book-image" src="https://i.ibb.co/TB0kQgv/voca3.png"><span class="book-title">문장 배열 연습3</span></a>
-      <a href="sentence4.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jb3bNTW/voca4.png"><span class="book-title">문장 배열 연습4</span></a>
+      <a href="https://nmyway77.github.io/arnew/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_5427732/54277325425.jpg?type=w300"><span class="book-title">목동중2</span></a>
+      <a href="https://nmyway77.github.io/mw2textbook/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3249613/32496138173.20250509071356.jpg?type=w300"><span class="book-title">문운중2</span></a>
+      <a href="https://nmyway77.github.io/md3textbook/" class="book-card"><img class="book-image" src="https://gdimg.gmarket.co.kr/3405727962/still/600?ver=1741332832"><span class="book-title">목동중3</span></a>
+      <a href="https://nmyway77.github.io/mil3textbook/" class="book-card"><img class="book-image" src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbTk963%2FbtqXD36f429%2FCzFIobrZGakkkYnVDGFxK0%2Fimg.jpg"><span class="book-title">목일중3</span></a>
       <a href="sentence5.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yS8DM0V/voca5.png"><span class="book-title">문장 배열 연습5</span></a>
       <a href="sentence6.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jwXvMz6/voca6.png"><span class="book-title">문장 배열 연습6</span></a>
       <a href="sentence7.html" class="book-card"><img class="book-image" src="https://i.ibb.co/pz6Xz6Y/voca7.png"><span class="book-title">문장 배열 연습7</span></a>
