--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <a href="https://nmyway77.github.io/mw2textbook/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3249613/32496138173.20250509071356.jpg?type=w300"><span class="book-title">문운중2</span></a>
       <a href="https://nmyway77.github.io/md3textbook/" class="book-card"><img class="book-image" src="https://gdimg.gmarket.co.kr/3405727962/still/600?ver=1741332832"><span class="book-title">목동중3</span></a>
       <a href="https://nmyway77.github.io/mil3textbook/" class="book-card"><img class="book-image" src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbTk963%2FbtqXD36f429%2FCzFIobrZGakkkYnVDGFxK0%2Fimg.jpg"><span class="book-title">목일중3</span></a>
-      <a href="sentence5.html" class="book-card"><img class="book-image" src="https://i.ibb.co/yS8DM0V/voca5.png"><span class="book-title">문장 배열 연습5</span></a>
+      <a href="sentence5.html" class="book-card"><img class="book-image" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDEwMTZfMTY0%2FMDAxNzI5MDc1NDE1OTMw.EBrr255u4vN8eR6tccOJ6ns3L0UKIZBEh7u3DNLelJcg.5Q2f7_Z8kGQdY0mrHX5RPJZVefZ-kIYbN5UNQeERkI8g.JPEG%2F%25BC%25F6%25B4%25C9%25C6%25AF%25B0%25AD_Light_%25BF%25B5%25BE%25EE450-.jpg&type=sc960_832"><span class="book-title">수특라이트 영어</span></a>
       <a href="sentence6.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jwXvMz6/voca6.png"><span class="book-title">문장 배열 연습6</span></a>
       <a href="sentence7.html" class="book-card"><img class="book-image" src="https://i.ibb.co/pz6Xz6Y/voca7.png"><span class="book-title">문장 배열 연습7</span></a>
       <a href="sentence8.html" class="book-card"><img class="book-image" src="https://i.ibb.co/Trk9cDn/voca8.png"><span class="book-title">문장 배열 연습8</span></a>
@@ -248,7 +248,7 @@
   <div class="content-section" id="section3">
     <div class="book-grid">
       <!-- 20개 예시 -->
-      <a href="line1.html" class="book-card"><img class="book-image" src="https://i.ibb.co/N2kqp9G/voca1.png"><span class="book-title">한줄해석 연습1</span></a>
+      <a href="https://nmyway77.github.io/thome/" class="book-card"><img class="book-image" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDEwMTZfMTY0%2FMDAxNzI5MDc1NDE1OTMw.EBrr255u4vN8eR6tccOJ6ns3L0UKIZBEh7u3DNLelJcg.5Q2f7_Z8kGQdY0mrHX5RPJZVefZ-kIYbN5UNQeERkI8g.JPEG%2F%25BC%25F6%25B4%25C9%25C6%25AF%25B0%25AD_Light_%25BF%25B5%25BE%25EE450-.jpg&type=sc960_832"><span class="book-title">한줄해석 연습1</span></a>
       <a href="line2.html" class="book-card"><img class="book-image" src="https://i.ibb.co/9nFSTvf/voca2.png"><span class="book-title">한줄해석 연습2</span></a>
       <a href="line3.html" class="book-card"><img class="book-image" src="https://i.ibb.co/TB0kQgv/voca3.png"><span class="book-title">한줄해석 연습3</span></a>
       <a href="line4.html" class="book-card"><img class="book-image" src="https://i.ibb.co/jb3bNTW/voca4.png"><span class="book-title">한줄해석 연습4</span></a>
