--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <!-- 20개 예시 -->
       <!-- 아래 예시 카드들 이미지만 바꿔서 사용하세요 -->
       <a href="https://nmyway77.github.io/arnew/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_5427732/54277325425.jpg?type=w300"><span class="book-title">목동중2</span></a>
-      <a href="https://nmyway77.github.io/mw2textbook/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3249613/32496138173.20250509071356.jpg?type=w300"><span class="book-title">문운중2</span></a>
+      <a href="https://nmyway77.github.io/mw2textbook/" class="book-card"><img class="book-image" src="https://shopping-phinf.pstatic.net/main_3249613/32496138173.20250509071356.jpg?type=w300"><span class="book-title">목운중2</span></a>
       <a href="https://nmyway77.github.io/md3textbook/" class="book-card"><img class="book-image" src="https://gdimg.gmarket.co.kr/3405727962/still/600?ver=1741332832"><span class="book-title">목동중3</span></a>
       <a href="https://nmyway77.github.io/mil3textbook/" class="book-card"><img class="book-image" src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbTk963%2FbtqXD36f429%2FCzFIobrZGakkkYnVDGFxK0%2Fimg.jpg"><span class="book-title">목일중3</span></a>
       <a href="sentence5.html" class="book-card"><img class="book-image" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDEwMTZfMTY0%2FMDAxNzI5MDc1NDE1OTMw.EBrr255u4vN8eR6tccOJ6ns3L0UKIZBEh7u3DNLelJcg.5Q2f7_Z8kGQdY0mrHX5RPJZVefZ-kIYbN5UNQeERkI8g.JPEG%2F%25BC%25F6%25B4%25C9%25C6%25AF%25B0%25AD_Light_%25BF%25B5%25BE%25EE450-.jpg&type=sc960_832"><span class="book-title">수특라이트 영어</span></a>
