--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 
   <!-- 하단 고정 버튼 -->
   <div class="footer-links">
-    <a href="https://play.google.com/store/apps/details?id=com.example.mcapp" target="_blank">MC앱 다운로드</a>
-    <a href="https://cafe.naver.com/mcenglishacademy" target="_blank">카페</a>
+    <a href="https://cafe.naver.com/tuntuntest/2707" target="_blank">MC앱 다운로드</a>
+    <a href="https://cafe.naver.com/tuntuntest" target="_blank">카페</a>
     <a href="https://blog.naver.com/nmyway" target="_blank">블로그</a>
   </div>
 
